--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -1,61 +1,57 @@
-.discos1 {
+/*
+@mixin discos{
+    display: flex;
+	justify-content: space-evenly;
+	flex-direction: row;
+	list-style-type: none;
+	margin-left: 1 rem;
+	color:  white;
+}
+.discos1{
+	@include discos;
+}
+.discos2{
+    @include discos;
+}
+.discos3{
+    @include discos;
+}
+.button {
+	border:none;
+	padding: 5px 10px;
+	text-align: center;
+	font-size: 10px;
+	box-shadow: 2px 2px 10px #000;
+}
+.orange{
+	@extend .button;
+	background: #1ff9aa;
+}
+*/
+.header {
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500;
+  top: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 3rem 1.5rem;
+}
+
+.header .header_nav li {
+  display: inline-block;
+  list-style-type: none;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  list-style-type: none;
-  margin-left: 1 rem;
-  color: white;
-}
-
-.discos2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  list-style-type: none;
-  margin-left: 1 rem;
-  color: white;
-}
-
-.discos3 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  list-style-type: none;
-  margin-left: 1 rem;
-  color: white;
-}
-
-.button, .orange {
-  border: none;
-  padding: 5px 10px;
-  text-align: center;
-  font-size: 10px;
-  -webkit-box-shadow: 2px 2px 10px #000;
-          box-shadow: 2px 2px 10px #000;
-}
-
-.orange {
-  background: #1ff9aa;
+  margin: auto;
+  margin-left: 10.5rem;
 }
 /*# sourceMappingURL=estilos.css.map */
