--- a/css/estilos.css
+++ b/css/estilos.css
@@ -150,9 +150,10 @@ a{
 .textobio{
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: left;
+	text-align: justify;
 	flex-direction: inline;
-	width: 420px;
+	width: 490px;
 	font-size: 18px;
 	color: white;
 	margin: auto;
@@ -390,10 +391,6 @@ button{
 		margin-right: 1rem;
 		position:center;
 	}
-    .fotobio{
-        width: 150px;
-		height: 120px;
-	}
 	.titulo{
 		font-weight: bold;
 		text-align: center;
@@ -411,24 +408,22 @@ button{
 		margin-top: 20px;
 	}	
 	.contacto{
-		width: 270px;
+		width: 189px;
 		text-align: left;
 		margin: auto;
 		margin-top: 0.2rem;
 		margin-bottom: 1rem;
 		margin-right: 2rem;
 		margin-left: 5rem;
-		font-size: 18px;
+		font-size: 16px;
 	}
 	.form-control1{
-		text-align: left;
-		margin: auto;
-		margin-top: 0.2rem;
-		margin-bottom: 1rem;
-		margin-right: 10.5rem;
-		font-size: 18px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 16px;
 		height: 200px; 
-		width: 270px;
+		width: 189px;
 	}
 	.button3{
 		background-color:#f91fb7;
@@ -484,7 +479,7 @@ button{
 		align-items: center;
 		justify-content: center;
 		flex-direction: inline;
-		width: 350px;
+		width: 395px;
 		font-size: 18px;
 		color: white;
 		margin: auto;
