--- a/css/estilos.css
+++ b/css/estilos.css
@@ -467,7 +467,8 @@ button{
 		margin: auto;
 		margin-top: 1rem;
 		margin-bottom: 1rem;
-		margin-left: 5rem;
+		margin-left: 2rem;
+		margin-right: 2rem;
 	}
 	.textobio{
 		display: flex;
