--- a/css/estilos.css
+++ b/css/estilos.css
@@ -302,6 +302,11 @@ div{
 	margin-right: 20px;
 }
 /*contacto*/
+.fondocontacto{
+	background-image: url(../assets/collage.png);
+	background-size: cover;
+	background-repeat: repeat;
+}
 .subtitulo1{
 	display: flex;
 	align-items: center;
