--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,33 +1,7 @@
-/*
-@mixin discos{
-    display: flex;
-	justify-content: space-evenly;
-	flex-direction: row;
-	list-style-type: none;
-	margin-left: 1 rem;
-	color:  white;
-}
-.discos1{
-	@include discos;
-}
-.discos2{
-    @include discos;
-}
-.discos3{
-    @include discos;
-}
-.button {
-	border:none;
-	padding: 5px 10px;
-	text-align: center;
-	font-size: 10px;
-	box-shadow: 2px 2px 10px #000;
-}
-.orange{
-	@extend .button;
-	background: #1ff9aa;
-}
-*/
+* {
+	margin:0px;
+	padding:0px;
+  }
 body{
 	font-family: 'Roboto Mono', monoespacio;
 	margin: 20px;
@@ -49,15 +23,31 @@ body{
 	align-items:center;
 	padding: 3rem 1.5rem;
 	.logotaba{
-		margin:auto;
+		margin: auto;
 		margin-left: 0px;
 	}
 	li{
-	    display:inline-block;
+		display: inline-block;
 		list-style-type:none;
 		justify-content: space-evenly;
 		margin: auto;
 		margin-left: 10.5rem;
+	.nav-link{
+			color: white;
+			font-size: 18px;
+		}
+	}
+}
+.redes{
+	justify-content: space-between;
+	.redes_sociales{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		list-style-type: none;
+		margin: auto;
+		margin-top: 3rem;
+		margin-bottom: 1rem;
 	}
 }
 
