--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -42,6 +42,44 @@ body{
 		}
 	}
 }
+.h1{
+	display:flex;
+	align-items:center;
+	justify-content: center;
+	font-weight: bold;
+	text-align: center;
+	color: #f91fb7;
+	font-size: 45px;
+	font-weight: 25px;
+	background-color: white;
+	display: inline;
+	margin: auto;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	padding: 12px;
+}
+.p{
+	font-size: 30px;
+	font-weight: bold;
+	margin: auto;
+	margin-top: 1rem;
+	margin-bottom: 1.5rem;
+}
+.button1{
+	display:flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #f91fb7;
+	color: white;
+	border-radius: 5px;
+	padding: 0.8rem;
+	border: 1px solid #f91fb7;
+	cursor: pointer;
+	margin:auto;
+	margin-top: 1.2rem;
+	margin-bottom: 0.4rem;
+	font-size: 16px;
+}
 #footer{
 	color: white;
 	font-size: 25px;
