--- a/css/estilos.css
+++ b/css/estilos.css
@@ -195,7 +195,7 @@ div{
 	margin-left: 20px;
 	margin-bottom: 10px;
 }
-.button2{
+.button{
 	display: flex;
 	align-items: center;
 	justify-content: center;
