--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -104,6 +104,33 @@ body{
 	color:white;
 	margin: auto;
 }
+.h3{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-weight: bold;
+	text-align: center;
+	color: white;
+	font-size: 40px;
+	font-weight: 25px;
+	margin: auto;
+	margin-top: 0rem;
+	margin-bottom: 3rem;
+	width: 200px;
+	padding: auto;
+}
+.discos{
+	justify-content: center;
+	.discos1 .discos2 .discos3{
+		display: flex;
+		align-items: center;
+		justify-content: space-evenly;
+		margin: auto;
+		margin-right: 20px;
+		margin-left: 20px;
+		margin-bottom: 10px;
+	}
+}
 div{
 	color: white;
 	#footer{
