--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -129,6 +129,20 @@ body{
 		margin-right: 20px;
 		margin-left: 20px;
 		margin-bottom: 10px;
+		.button{
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: #f91fb7;
+			color: white;
+			border-radius: 5px;
+			padding: .8rem 1.5rem;
+			border: 1px solid #f91fb7;
+			cursor: pointer;
+			margin: auto;
+			margin-top: 3rem;
+			margin-bottom: 6rem;
+		}
 	}
 }
 div{
