--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -195,7 +195,7 @@ body {
   margin-bottom: 10px;
 }
 
-.discos .discos1 .discos2 .discos3 .button {
+.discos .discos1 .discos2 .discos3 .botones1 .botones2 .botones3 .button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
