cambios en galería

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -304,7 +304,7 @@ i{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: #ffffff;
+	color: white;
 	font-size: 35px;
 	font-weight: 25px;
 	margin: auto;
