--- a/css/estilos.css
+++ b/css/estilos.css
@@ -366,13 +366,13 @@ i{
 		margin: auto;
 		margin-bottom: 1rem;
 	} 
-	.header_nav{
+	.header{
 		display:flex;
 		list-style-type:none;
 		justify-content:space-evenly;
 		flex-direction:row;
 		margin-right: 1rem;
-		position:center;
+		position: center;
 	}
 	.h1{
 		font-weight: bold;
