--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -46,6 +46,14 @@ body{
 			}
 		}
 	}
+	@media all and (max-width:720px){
+		display:flex;
+		list-style-type: none;
+		justify-content: space-evenly;
+		flex-direction: row;
+		margin-right: 1rem;
+		position: center;
+	}
 }
 .h1{
 	display:flex;
@@ -62,6 +70,15 @@ body{
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	padding: 12px;
+}
+.banner{
+@media all and (max-width: 720px){
+		display:flex;
+		align-items: center;
+		justify-items: center;
+		margin: auto;
+		margin-bottom: 1rem;
+	}
 }
 .p{
 	font-size: 30px;
