--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -70,6 +70,17 @@ body{
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	padding: 12px;
+	@media all and (max-width: 720px){
+		font-weight: bold;
+		text-align: center;
+		color:#f91fb7;
+		font-size: 35px;
+		font-weight: 20px;
+		background-color: white;
+		display: inline;
+		margin: auto;
+		margin-bottom: 5rem;
+	}
 }
 .banner{
 @media all and (max-width: 720px){
@@ -78,6 +89,8 @@ body{
 		justify-items: center;
 		margin: auto;
 		margin-bottom: 1rem;
+		margin-top: 20px;
+		width:80%;
 	}
 }
 .p{
@@ -101,6 +114,21 @@ body{
 	margin-top: 1.2rem;
 	margin-bottom: 0.4rem;
 	font-size: 16px;
+	@media all and(max-width: 720px){
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: #f91fb7;
+		color: white;
+		border-radius: 5px;
+		padding: 0.8rem;
+		border:1px solid #f91fb7;
+		cursor: pointer;
+		margin: auto;
+		margin-top: 1.2rem;
+		margin-bottom: 0.4rem;
+		font-size: 16px;
+	}
 }
 .h2{
 	display: flex;
@@ -125,6 +153,16 @@ body{
 	font-size: 18px;
 	color:white;
 	margin: auto;
+	@media all and (max-width: 720px){
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: inline;
+		width: 320px;
+		font-size: 18px;
+		color: white;
+		margin: auto;
+	}
 }
 .h3{
 	display: flex;
@@ -225,6 +263,24 @@ body{
 		font-size: 16px;
 		height: 300px;
 		width: 500px;
+		@media all and (max-width: 720px){
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-size: 16px;
+			height: 200px;
+			width: 170px;
+		}
+	}
+	@media all and (max-width: 720px){
+		width: 170px;
+		text-align: left;
+		margin: auto;
+		margin-top: 0.2rem;
+		margin-bottom: 1rem;
+		margin-right: 2rem;
+		margin-left: 5rem;
+		font-size: 16px;
 	}
 }
 .button3{
@@ -239,6 +295,15 @@ body{
 	margin-bottom: 3rem;
 	margin-right: 26rem;
 	font-size: 16px;
+	@media all and (max-width: 720px){
+		background-color: #f91fb7;
+		color: white;
+		border: 1px solid #f91fb7;
+		cursor: pointer;
+		width: 0px;
+		margin: auto;
+		margin-right: 12rem;
+    }
 }
 .mx-auto1{
 	display: flex;
@@ -247,6 +312,13 @@ body{
 	margin: auto;
 	margin-left: 9rem;
 	width: 200px;
+	@media all and (max-width: 720px){
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: auto;
+		width: 200px;
+	}
 }
 div{
 	color: white;
@@ -278,6 +350,11 @@ div{
 				list-style-type: none;
 				margin: auto;
 				margin-left: 8rem;
+				@media all and (max-width: 720px){
+					list-style-type: none;
+					margin: auto;
+					margin-top: 3 rem;
+				}
 				a{
 					text-decoration: none;
 				}
@@ -289,7 +366,14 @@ div{
 		.mx-auto{
 			display: flex;
 			align-items: center;
-			justify-content: center;	
+			justify-content: center;
+			@media all and (max-width: 720px){
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				margin: auto;
+				width:  200px;
+			}	
 		}
 		.modal-title{
 			color:black;
