--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -208,6 +208,23 @@ body .fondocontacto {
   margin-bottom: 3rem;
 }
 
+@media all and (max-width: 720px) {
+  .contain1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 320px;
+    height: 230px;
+    margin: auto;
+  }
+}
+
 .textobio {
   display: -webkit-box;
   display: -ms-flexbox;
