--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -41,7 +41,7 @@ body{
 			margin: auto;
 			margin-left: 10.5rem;
 		.nav-link{
-				color: white;
+				color: #fff;
 				font-size: 18px;
 			}
 		}
@@ -64,7 +64,7 @@ body{
 	color: #f91fb7;
 	font-size: 45px;
 	font-weight: 25px;
-	background-color: white;
+	background-color: #fff;
 	display: inline;
 	margin: auto;
 	margin-top: 2rem;
@@ -76,7 +76,7 @@ body{
 		color:#f91fb7;
 		font-size: 35px;
 		font-weight: 20px;
-		background-color: white;
+		background-color: #fff;
 		display: inline;
 		margin: auto;
 		margin-bottom: 5rem;
@@ -105,7 +105,7 @@ body{
 	align-items: center;
 	justify-content: center;
 	background-color: #f91fb7;
-	color: white;
+	color: #fff;
 	border-radius: 5px;
 	padding: 0.8rem;
 	border: 1px solid #f91fb7;
@@ -119,7 +119,7 @@ body{
 		align-items: center;
 		justify-content: center;
 		background-color: #f91fb7;
-		color: white;
+		color: #fff;
 		border-radius: 5px;
 		padding: 0.8rem;
 		border:1px solid #f91fb7;
@@ -136,7 +136,7 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: white;
+	color: #fff;
 	font-size: 40px;
 	font-weight: 25px;
 	margin: auto;
@@ -161,7 +161,7 @@ body{
 	flex-direction: inline;
     width: 750px;
 	font-size: 18px;
-	color:white;
+	color: #fff;
 	margin: auto;
 	@media all and (max-width: 720px){
 		display: flex;
@@ -170,7 +170,7 @@ body{
 		flex-direction: inline;
 		width: 320px;
 		font-size: 18px;
-		color: white;
+		color: #fff;
 		margin: auto;
 	}
 }
@@ -180,7 +180,7 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: white;
+	color: #fff;
 	font-size: 40px;
 	font-weight: 25px;
 	margin: auto;
@@ -208,7 +208,7 @@ body{
 				align-items: center;
 				justify-content: center;
 				background-color: #f91fb7;
-				color: white;
+				color: #fff;
 				border-radius: 5px;
 				padding: .8rem 1.5rem;
 				border: 1px solid #f91fb7;
@@ -226,7 +226,7 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: white;
+	color: #fff;
 	font-size: 40px;
 	font-weight: 25px;
 	margin: auto;
@@ -260,7 +260,7 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: white;
+	color: #fff;
 	font-size: 35px;
 	font-weight: 25px;
 	margin: auto;
@@ -305,7 +305,7 @@ body{
 }
 .button3{
 	background-color: #f91fb7;
-	color: white;
+	color: #fff;
 	border-radius: 5px;
 	padding: 0.8rem;
 	border: 1px solid #f91fb7;
@@ -317,7 +317,7 @@ body{
 	font-size: 16px;
 	@media all and (max-width: 720px){
 		background-color: #f91fb7;
-		color: white;
+		color: #fff;
 		border: 1px solid #f91fb7;
 		cursor: pointer;
 		width: 0px;
@@ -341,9 +341,9 @@ body{
 	}
 }
 div{
-	color: white;
+	color: #fff;
 	#footer{
-		color: white;
+		color: #fff;
 		font-size: 25px;
 		margin:auto;
 		.redes{
