cambios de color

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,6 +1,6 @@
 $palette: (
     'Primero': #1ff9aa,
-    'Segundo': #fff,
-    'Tercero':
+    'Segundo': #f91fb7,
+    'Tercero': #fff,
     'Cuarto':
 )
