cambios en sass

--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,4 @@
+@import "main";
 * {
 	margin:0px;
 	padding:0px;
@@ -6,7 +7,7 @@ body{
 	font-family: 'Roboto Mono', monoespacio;
 	margin: 20px;
 	text-align: center;
-	background-color: #1ff9aa;
+	background-color: #000;
 	background-size: cover;
 	position: center;
 	background-repeat: no-repeat;
