--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -7,7 +7,7 @@ body{
 	font-family: 'Roboto Mono', monoespacio;
 	margin: 20px;
 	text-align: center;
-	background-color: #000;
+	background-color: map-get($map: $palette, $key: 'Cuarto');
 	background-size: cover;
 	position: center;
 	background-repeat: no-repeat;
