--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -20,7 +20,7 @@ body{
 	}
 }
 .header{
-	color:#fff;
+	color: map-get($map: $palette, $key: 'Tercero');
 	font-size: 15px;
 	font-weight: 500;
 	top: 15px;
@@ -42,7 +42,7 @@ body{
 			margin: auto;
 			margin-left: 10.5rem;
 		.nav-link{
-				color: #fff;
+				color: map-get($map: $palette, $key: 'Tercero');
 				font-size: 18px;
 			}
 		}
@@ -62,10 +62,10 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: #f91fb7;
+	color: map-get($map: $palette, $key:'segundo');
 	font-size: 45px;
 	font-weight: 25px;
-	background-color: #fff;
+	background-color: map-get($map: $palette, $key: 'Tercero');
 	display: inline;
 	margin: auto;
 	margin-top: 2rem;
@@ -74,10 +74,10 @@ body{
 	@media all and (max-width: 720px){
 		font-weight: bold;
 		text-align: center;
-		color:#f91fb7;
+		color: map-get($map: $palette, $key:'Segundo');
 		font-size: 35px;
 		font-weight: 20px;
-		background-color: #fff;
+		background-color: map-get($map: $palette, $key: 'Tercero');
 		display: inline;
 		margin: auto;
 		margin-bottom: 5rem;
@@ -105,11 +105,11 @@ body{
 	display:flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #f91fb7;
-	color: #fff;
+	background-color: map-get($map: $palette, $key: 'Segundo');
+	color: map-get($map: $palette, $key: 'Tercero');
 	border-radius: 5px;
 	padding: 0.8rem;
-	border: 1px solid #f91fb7;
+	border: 1px solid map-get($map: $palette, $key: 'Segundo');
 	cursor: pointer;
 	margin:auto;
 	margin-top: 1.2rem;
@@ -119,11 +119,11 @@ body{
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		background-color: #f91fb7;
-		color: #fff;
+		background-color: map-get($map: $palette, $key: 'Segundo');
+		color: map-get($map: $palette, $key: 'Segundo');
 		border-radius: 5px;
 		padding: 0.8rem;
-		border:1px solid #f91fb7;
+		border:1px solid map-get($map: $palette, $key: 'Segundo');
 		cursor: pointer;
 		margin: auto;
 		margin-top: 1.2rem;
@@ -137,7 +137,7 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: #fff;
+	color: map-get($map: $palette, $key: 'Tercero');
 	font-size: 40px;
 	font-weight: 25px;
 	margin: auto;
@@ -162,7 +162,7 @@ body{
 	flex-direction: inline;
     width: 750px;
 	font-size: 18px;
-	color: #fff;
+	color: map-get($map: $palette, $key: 'Tercero');
 	margin: auto;
 	@media all and (max-width: 720px){
 		display: flex;
@@ -171,7 +171,7 @@ body{
 		flex-direction: inline;
 		width: 320px;
 		font-size: 18px;
-		color: #fff;
+		color: map-get($map: $palette, $key: 'Tercero');
 		margin: auto;
 	}
 }
@@ -181,7 +181,7 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: #fff;
+	color: map-get($map: $palette, $key: 'Tercero');
 	font-size: 40px;
 	font-weight: 25px;
 	margin: auto;
@@ -208,11 +208,11 @@ body{
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #f91fb7;
-				color: #fff;
+				background-color: map-get($map: $palette, $key: 'Segundo');
+				color: map-get($map: $palette, $key: 'Tercero');
 				border-radius: 5px;
 				padding: .8rem 1.5rem;
-				border: 1px solid #f91fb7;
+				border: 1px solid map-get($map: $palette, $key: 'Segundo');
 				cursor: pointer;
 				margin: auto;
 				margin-top: 3rem;
@@ -227,7 +227,7 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: #fff;
+	color: map-get($map: $palette, $key: 'Tercero');
 	font-size: 40px;
 	font-weight: 25px;
 	margin: auto;
@@ -261,7 +261,7 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: #fff;
+	color: map-get($map: $palette, $key: 'Tercero');
 	font-size: 35px;
 	font-weight: 25px;
 	margin: auto;
@@ -305,11 +305,11 @@ body{
 	}
 }
 .button3{
-	background-color: #f91fb7;
-	color: #fff;
+	background-color: map-get($map: $palette, $key: 'Segundo');
+	color: map-get($map: $palette, $key: 'Tercero');
 	border-radius: 5px;
 	padding: 0.8rem;
-	border: 1px solid #f91fb7;
+	border: 1px solid map-get($map: $palette, $key: 'Segundo');
 	cursor: pointer;
 	margin: auto;
 	margin-top: 0.8rem;
@@ -317,9 +317,9 @@ body{
 	margin-right: 26rem;
 	font-size: 16px;
 	@media all and (max-width: 720px){
-		background-color: #f91fb7;
-		color: #fff;
-		border: 1px solid #f91fb7;
+		background-color: map-get($map: $palette, $key: 'Segundo');
+		color: map-get($map: $palette, $key:'Tercero');
+		border: 1px solid map-get($map: $palette, $key: 'Segundo');
 		cursor: pointer;
 		width: 0px;
 		margin: auto;
@@ -342,9 +342,9 @@ body{
 	}
 }
 div{
-	color: #fff;
+	color: map-get($map: $palette, $key: 'Segundo');
 	#footer{
-		color: #fff;
+		color: map-get($map: $palette, $key: 'Tercero');
 		font-size: 25px;
 		margin:auto;
 		.redes{
@@ -397,7 +397,7 @@ div{
 			}	
 		}
 		.modal-title{
-			color: #000;
+			color: map-get($map: $palette, $key: 'cuarto');
 		}
 	}
 }
