--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -59,7 +59,7 @@ body .fondocontacto {
 }
 
 .header .container-flex li .nav-link {
-  color: white;
+  color: #fff;
   font-size: 18px;
 }
 
@@ -93,10 +93,9 @@ body .fondocontacto {
           justify-content: center;
   font-weight: bold;
   text-align: center;
-  color: #f91fb7;
   font-size: 45px;
   font-weight: 25px;
-  background-color: white;
+  background-color: #fff;
   display: inline;
   margin: auto;
   margin-top: 2rem;
@@ -111,7 +110,7 @@ body .fondocontacto {
     color: #f91fb7;
     font-size: 35px;
     font-weight: 20px;
-    background-color: white;
+    background-color: #fff;
     display: inline;
     margin: auto;
     margin-bottom: 5rem;
@@ -153,7 +152,7 @@ body .fondocontacto {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #f91fb7;
-  color: white;
+  color: #fff;
   border-radius: 5px;
   padding: 0.8rem;
   border: 1px solid #f91fb7;
@@ -176,7 +175,7 @@ body .fondocontacto {
         -ms-flex-pack: center;
             justify-content: center;
     background-color: #f91fb7;
-    color: white;
+    color: #f91fb7;
     border-radius: 5px;
     padding: 0.8rem;
     border: 1px solid #f91fb7;
@@ -200,7 +199,7 @@ body .fondocontacto {
           justify-content: center;
   font-weight: bold;
   text-align: center;
-  color: white;
+  color: #fff;
   font-size: 40px;
   font-weight: 25px;
   margin: auto;
@@ -242,7 +241,7 @@ body .fondocontacto {
           flex-direction: inline;
   width: 750px;
   font-size: 18px;
-  color: white;
+  color: #fff;
   margin: auto;
 }
 
@@ -263,7 +262,7 @@ body .fondocontacto {
             flex-direction: inline;
     width: 320px;
     font-size: 18px;
-    color: white;
+    color: #fff;
     margin: auto;
   }
 }
@@ -280,7 +279,7 @@ body .fondocontacto {
           justify-content: center;
   font-weight: bold;
   text-align: center;
-  color: white;
+  color: #fff;
   font-size: 40px;
   font-weight: 25px;
   margin: auto;
@@ -312,6 +311,11 @@ body .fondocontacto {
   margin-bottom: 10px;
 }
 
+.discos .discos1 .discos2 .discos3 .contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .discos .discos1 .discos2 .discos3 .botones1 .botones2 .botones3 .button {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -323,7 +327,7 @@ body .fondocontacto {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #f91fb7;
-  color: white;
+  color: #fff;
   border-radius: 5px;
   padding: .8rem 1.5rem;
   border: 1px solid #f91fb7;
@@ -345,7 +349,7 @@ body .fondocontacto {
           justify-content: center;
   font-weight: bold;
   text-align: center;
-  color: white;
+  color: #fff;
   font-size: 40px;
   font-weight: 25px;
   margin: auto;
@@ -377,6 +381,18 @@ body .fondocontacto {
   margin-right: 20px;
 }
 
+.foto .grupos .grupo1 .grupo2 .grupo3 .grupo4 .grupo5 .grupo6:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all 250ms;
+  transition: all 250ms;
+}
+
+.foto .grupos .grupo1 .grupo2 .grupo3 .grupo4 .grupo5 .grupo6:hover .contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .h5 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -389,7 +405,7 @@ body .fondocontacto {
           justify-content: center;
   font-weight: bold;
   text-align: center;
-  color: white;
+  color: #fff;
   font-size: 35px;
   font-weight: 25px;
   margin: auto;
@@ -449,7 +465,7 @@ body .fondocontacto {
 
 .button3 {
   background-color: #f91fb7;
-  color: white;
+  color: #fff;
   border-radius: 5px;
   padding: 0.8rem;
   border: 1px solid #f91fb7;
@@ -464,7 +480,7 @@ body .fondocontacto {
 @media all and (max-width: 720px) {
   .button3 {
     background-color: #f91fb7;
-    color: white;
+    color: #fff;
     border: 1px solid #f91fb7;
     cursor: pointer;
     width: 0px;
@@ -505,11 +521,11 @@ body .fondocontacto {
 }
 
 div {
-  color: white;
+  color: #f91fb7;
 }
 
 div #footer {
-  color: white;
+  color: #fff;
   font-size: 25px;
   margin: auto;
 }
@@ -601,9 +617,5 @@ div #footer .mx-auto {
     margin: auto;
     width: 200px;
   }
-}
-
-div #footer .modal-title {
-  color: black;
 }
 /*# sourceMappingURL=estilos.css.map */
