cambios en sass

--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,7 +1,5 @@
 @import "main";
 @import "fuentes";
-@import "extend";
-@import "mixin";
 @import "animacion";
 * {
 	margin:0px;
@@ -207,23 +205,30 @@ body{
 		.contain{
 			object-fit: contain;
 		}
-		.botones1 .botones2 .botones3{
-			.button{
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				background-color: map-get($map: $palette, $key: 'Segundo');
-				color: map-get($map: $palette, $key: 'Tercero');
-				border-radius: 5px;
-				padding: .8rem 1.5rem;
-				border: 1px solid map-get($map: $palette, $key: 'Segundo');
-				cursor: pointer;
-				margin: auto;
-				margin-top: 3rem;
-				margin-bottom: 6rem;
-			}
-	    }
 	}
+}
+@mixin  button{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: map-get($map: $palette, $key: 'Segundo');
+		color: map-get($map: $palette, $key: 'Tercero');
+		border-radius: 5px;
+		padding: .8rem 1.5rem;
+		border: 1px solid map-get($map: $palette, $key: 'Segundo');
+		cursor: pointer;
+		margin: auto;
+		margin-top: 3rem;
+		margin-bottom: 6rem;
+}
+.botones1{
+	@include button;
+}
+.botones2{
+	@include button;
+}
+.botones3{
+	@include button;
 }
 .h4{
 	display: flex;
@@ -243,22 +248,103 @@ body{
 .grupos{
 	justify-content: center;
 	align-items: center;
-	.grupo1 .grupo2 .grupo3 .grupo4 .grupo5 .grupo6{
-		display: flex;
-		justify-content: space-evenly;
-		margin: auto;
-		margin-bottom: 24px;
-	    margin-left: 20px;
-		margin-right: 20px;
-		.foto &:hover{
-			transform: scale(1.1);
-			transition: all 250ms;
-			.contain{
-				object-fit: contain;
+}
+.grupo1{
+	@extend .grupos;
+	display: flex;
+	justify-content: space-evenly;
+	margin: auto;
+	margin-bottom: 24px;
+	margin-left: 20px;
+	margin-right: 20px;
+	.foto &:hover{
+		transform: scale(1.1);
+		transition: all 250ms;
+		.contain{
+			object-fit: contain;
 			}
 		}
 	}
-}
+.grupo2{
+	@extend .grupos;
+	display: flex;
+    justify-content: space-evenly;
+	margin: auto;
+	margin-bottom: 24px;
+	margin-left: 20px;
+	margin-right: 20px;
+	.foto &:hover{
+		transform: scale(1.1);
+		transition: all 250ms;
+		.contain{
+			object-fit: contain;
+			}
+		}
+	}
+.grupo3{
+	@extend .grupos;
+	display: flex;
+	justify-content: space-evenly;
+	margin: auto;
+	margin-bottom: 24px;
+	margin-left: 20px;
+	margin-right: 20px;
+	.foto &:hover{
+		transform: scale(1.1);
+		transition: all 250ms;
+		.contain{
+			object-fit: contain;
+			}
+		}
+	}	
+.grupo4{
+	@extend .grupos;
+	display: flex;
+	justify-content: space-evenly;
+	margin: auto;
+	margin-bottom: 24px;
+	margin-left: 20px;
+	margin-right: 20px;
+	.foto &:hover{
+		transform: scale(1.1);
+		transition: all 250ms;
+		.contain{
+			object-fit: contain;
+			}
+		}
+	}
+.grupo5{
+	@extend .grupos;
+	display: flex;
+	justify-content: space-evenly;
+	margin: auto;
+	margin-bottom: 24px;
+	margin-left: 20px;
+	margin-right: 20px;
+	.foto &:hover{
+		transform: scale(1.1);
+		transition: all 250ms;
+		.contain{
+			object-fit: contain;
+			}
+		}
+	}
+.grupo6{
+	@extend .grupos;
+	display: flex;
+	justify-content: space-evenly;
+	margin: auto;
+	margin-bottom: 24px;
+	margin-left: 20px;
+	margin-right: 20px;
+	.foto &:hover{
+		transform: scale(1.1);
+		transition: all 250ms;
+		.contain{
+			object-fit: contain;
+			}
+		}
+	}	
 .h5{
 	display: flex;
 	align-items: center;
