--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -241,6 +241,30 @@ body{
 		}
 	}
 }
+@mixin button{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: map-get($map: $palette, $key: 'Segundo');
+		color: map-get($map: $palette, $key: 'Tercero');
+		border-radius: 5px;
+		padding: .8rem 1.5rem;
+		border: 1px solid map-get($map: $palette, $key: 'Segundo');
+		cursor: pointer;
+		margin: auto;
+		margin-top: 3rem;
+		margin-bottom: 6rem;
+	}
+.botones1{
+	@include button;
+}
+.botones2{
+	@include button;
+}
+.botones3{
+	@include button;
+}
+
 .h5{
 	display: flex;
 	align-items: center;
